<resources>
    <string name="app_name">ToDoCompose</string>
    <string name="check">check</string>
    <string name="all_done">All done !</string>
    <string name="task_name">Task name</string>
    <string name="project_name">Project name</string>
    <string name="project">Project</string>
    <string name="edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="add_a_task">Add a task</string>
    <string name="delete">Delete</string>
    <string name="create_project">Create a new project</string>
    <string name="modify_project">Modify the project</string>
    <string name="todo">To Do</string>
    <string name="whoops">Whoops... we were unable to get your tasks list</string>
    <string name="warning_message">Delete project and all associated tasks ?</string>
</resources>