...

    Scaffold(
        topBar = { ToDoAppBarr(changeProjectMode = { projectMode = !projectMode }) },
        floatingActionButton = {
            FloatingActionButton(
                onClick = { showDialog = true },
                modifier = Modifier.testTag("test-FAB")
            ) {
                Icon(Icons.Filled.Add, "Add", tint = Color.White)
            }
        }) {

        // Screen
...
